--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 Based in the UK, I'm a front-end developer passionate about
                 building accessible web apps that users love.
               </p>
-              <a href="#contact" class="hero__contact underline">Contact me</a>
+              <a href="#" class="hero__contact1">Contact me</a>
             </div>
           </div>
         </div>
@@ -112,7 +112,10 @@
         <div class="wrapper projects__wrapper">
           <div class="projects__grid">
             <h2 class="projects__headline header-xl">Projects</h2>
-            <a href="#contact" class="projects__contact underline"
+            <a
+              href="#contact"
+              class="projects__contact underline"
+              style="color: white"
               >Contact me</a
             >
 
@@ -285,7 +288,7 @@
                 required
               />
               <img
-                src="/assets/images/icon-invalid.svg"
+                src=""
                 alt=""
                 class="contact__invalid-icon"
                 width="24"
@@ -302,7 +305,7 @@
                 required
               />
               <img
-                src="/assets/images/icon-invalid.svg"
+                src=""
                 alt=""
                 class="contact__invalid-icon"
                 width="24"
@@ -318,9 +321,10 @@
                 rows="3"
                 placeholder="Message"
                 required
+                style="border-bottom: 2px; color: white; outline: none"
               ></textarea>
               <img
-                src="/assets/images/icon-invalid.svg"
+                src=""
                 alt=""
                 class="contact__invalid-icon"
                 width="24"
@@ -328,7 +332,7 @@
               />
             </div>
             <div class="contact__control align-right">
-              <button type="submit">Send Message</button>
+              <button type="submit" id="btn1">Send Message</button>
             </div>
           </form>
         </div>
